client opcua completato, pulizia e sistemazione log class